--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Technical Frontend Test - HolaLuz",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --debug --devtool source-map --output-pathinfo --port 9000",
+    "start": "webpack-dev-server --debug --devtool source-map --output-pathinfo",
     "start:prod": "webpack-dev-server",
-    "build": "webpack",
-    "build:prod": "webpack -p"
+    "build": "yarn run clean && webpack",
+    "build:prod": "yarn run clean && webpack -p"
   },
   "author": "Carlos Moreno",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "sass-mq": "^3.3.2",
+    "select2": "^4.0.3",
     "tether": "^1.4.0"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.2",
     "handlebars-loader": "^1.5.0",
+    "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
     "normalize-scss": "^6.0.0",
     "sass-loader": "^6.0.3",
