--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "backbone.marionette": "^3.3.1",
+    "backbone.routefilter": "^1.0.0",
     "bootstrap": "4.0.0-alpha.6",
     "echarts": "^3.5.4",
     "fs": "^0.0.1-security",
+    "google-fonts": "^1.0.0",
     "handlebars": "^4.0.7",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
