--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "echarts": "^3.5.4",
     "fs": "^0.0.1-security",
     "google-fonts": "^1.0.0",
+    "google-fonts-webpack-plugin": "^0.4.0",
     "handlebars": "^4.0.7",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
