--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "holaluz-carlos",
+  "name": "finestra-wedding",
   "version": "0.0.1",
-  "description": "Technical Frontend Test - HolaLuz",
+  "description": "Wedding application",
   "main": "index.js",
   "repository": "git@github.com:charlybrown03/finestraweb.git",
   "scripts": {
