--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "handlebars": "^4.0.7",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "sass-mq": "^3.3.2",
     "select2": "^4.0.3",
     "tether": "^1.4.0"
