Create cache system for production environments

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "webpack-dev-server --debug --devtool source-map --output-pathinfo",
     "start:prod": "webpack-dev-server",
     "build": "yarn run clean && webpack",
-    "build:prod": "yarn run clean && webpack -p"
+    "build:prod": "yarn run clean && NODE_ENV=production webpack -p"
   },
   "author": "Carlos Moreno",
   "license": "ISC",
@@ -37,6 +37,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^0.11.2",
     "handlebars-loader": "^1.5.0",
     "html-webpack-plugin": "^2.28.0",
