--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "file-loader": "^0.11.2",
     "handlebars-loader": "^1.5.0",
     "html-webpack-plugin": "^2.28.0",
+    "image-webpack-loader": "^3.3.1",
     "node-sass": "^4.5.2",
     "normalize-scss": "^6.0.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
   }
