--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "webpack-dev-server --debug --devtool source-map --output-pathinfo",
     "start:prod": "webpack-dev-server",
     "build": "yarn run clean && webpack",
-    "build:prod": "yarn run clean && NODE_ENV=production webpack -p"
+    "build:prod": "yarn run clean && NODE_ENV=production webpack --config webpack-prod.config.js -p"
   },
   "author": "Carlos Moreno",
   "license": "ISC",
@@ -36,6 +36,8 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "change-extension-plugin": "^1.1.2",
+    "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^0.11.2",
